# helium

./: .gitignore  CMakeLists.txt  LANG.md  README  README.md  TODO.md  build.sh  create.sh  create_xcode.sh  install.sh  run_tests.sh
cmake/Module/: cmocka.cmake
compiler/: main.c  program.c
compiler/core/: asm.c  asm.h  ast.c  ast.h  canon.c  canon.h  error.c  error.h  frame.h  graph.c  graph.h  ir.c  ir.h  liveness.c  liveness.h  machine.c  machine.h  parse.c  program.h  regalloc.c  regalloc.h  symbol.h
compiler/modules/helium/: ast.c  ast.h  escape.c  escape.h  helium.ll  helium.yy  preproc.c  preproc.h  semant.c  semant.h  translate.c  translate.h  types.c
compiler/modules/mips/: ast.c  ast.h  codegen.c  frame.c  ir.h  machine.c  machine.h  mips.ll  mips.yy  semant.c  semant.h
compiler/util/: hexspk.h  list.h  log.h  pair.c  parse.c  parse.h  stack.c  stack.h  str.h  table.c  util.c  util.h  vector.h
helium/: asm.c  ast.c  ast.h  ast_asm.c  ast_asm.h  ast_helium.c  ast_helium.h  canon.c  canon.h  codegen.h  color.c  color.h  env.c  env.h  error.c  error.h  errormsg.c  errormsg.h  escape.c  escape.h  flowgraph.c  flowgraph.h  frame.h  graph.c  graph.h  helium.ll  helium.yy  lexer.lex  liveness.c  liveness.h  machine.c  machine.h  main.c  mips.ll  mips.yy  mipscodegen.c  mipsframe.c  mipsmachine.c  mipsmachine.h  parse.c  (+24 more)
helium/core/: flowgraph.c  flowgraph.h  frame.h  liveness.h  machine.c  machine.h  parse.h  program.h  regalloc.h  symbol.c  temp.c  temp.h
helium/ext/: bitarray.c  bitarray.h  bool.h  hexspk.h  list.c  list.h  log.h  mem.c  mem.h  pair.c  stack.c  stack.h  str.c  str.h  string.h  table.c  table.h  util.c  util.h  vector.c  vector.h
helium/modules/helium/: ast.c  env.c  env.h  helium.ll  translate.h  types.c  types.h
helium/modules/mips/: machine.c
helium/util/: bitarray.c  bitarray.h  list.c  mem.c  mem.h  pair.h  str.c  vector.c
test/: escape_test.c  program_test.c
test/compile-fail/: asm__base.he  asm__ipol.he  asm__top_level.he  assign__wrong_type.he  break.he  call__args_less.he  call__args_more.he  call__args_wrong_type.he  call__non_callable.he  call__undef_sym.he  decl__fn.he  decl__type.he  decl__var.he  exp__array.he  exp__cast.he  exp__nil.he  exp__pointer.he  exp__record.he  fn__empty.he  fn__main_ret_type_str.he  fn__ret_omit.he  fn__unknown_ids.he  fn__unknown_param_type.he  fn__unknown_ret_type.he  loop__for.he  main__ret_type_string.he  op__wrong_type.he  ret__main_value_type_error.he  type__array.he  type__record.he  type__scope.he  type__unknown.he  var__array.he  var__record.he  var__scope.he  var__simple.he
test/driver/: htr.py
test/helium/: if.he  if.s  while.s
test/helium/array/: stack__decl.he  stack__init.he
test/helium/record/: stack__decl.s
test/helium/scope/: func_and_func__same_level.he  func_and_func__same_level.s
test/libhc/: CMakeLists.txt  bench.c  bitarray.c  escaping.c  list.c  liveness_test.c  pair.c  scanner_test.c  stack.c  str.c  table.c  test_ast.c  test_semant.c  vector.c  vector_test.c
test/libhc/__to_be_rewritten/: ast.c  regalloc_test.c  semant_test.c  test_semant.c
test/parse-fail/: keyword-let.he  keyword__let.he  keyword__nil.he
test/run-fail/: fn__non-ret-exit.he  macro__assert.he  macro__panic.he  main__implicit_ret.he  panic.he  ret__fn_expl.he  ret__fn_impl.he  ret__main_expl.he  ret__main_impl.he
test/run-pass/: array__decl.he  array__exp.he  array__stack__array_exp.he  asm__interpolation.he  asm__labels.he  assert.he  decl__type.he  decl__var.he  exp__array.he  exp__cast.he  exp__nil.he  exp__pointer.he  exp__record.he  exp__str.he  fn__empty.he  fn__empty_main.he  fn__multi_scope.he  fn__non-ret-exit.he  fn__ret-exit.he  for.he  func_and_var__same_level.he  if.he  loop__while.he  main__implicit_ret.he  op__assign.he  op__logic.he  op__math.he  record__decl.he  record__exp.he  record__stack__decl.he  record__stack__init.he  ret__main_expl.he  ret__main_impl_2.he  type__array.he  type__pointer.he  type__record.he  var__array.he  var__pointer.he  var__record.he  var__simple.he
tests/: bitarray_test.c  mips_asm_test.c  stack_test.c  table_test.c  test_program.c
tests/helium/: while.he
tests/helium/array/: stack__array_exp.he  stack__init.s
tests/helium/record/: stack__init.s
tests/helium/scope/: func_and_func__diff_level.he  func_and_func__diff_level.s  func_and_var__diff_level.he  func_and_var__diff_level.s  func_and_var__same_level.s
